tests/snapshots/diagnostics/snapshots/snapshot_diagnostics__snapshots__diagnostics__snapshot_0058_return_mismatch_dual_span_full_rendered.snap
---
source: tests/snapshots/diagnostics/mod.rs
expression: output
---
--> compiler error[E300]: TYPE UNIFICATION ERROR

The return value of `bad` does not match its declared return type.

  --> examples/type_system/failing/108_fun_return_string_vs_int.flx:2:5
  |
1 | fn bad() -> Int {

  |             --- `bad` was declared to return `Int`
2 |     "oops"
  |     ^^^^^^
  |     ------ this expression has type `String`

Help:
  Return a `Int` value from `bad` or change the declared return type.
